crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__basic_tag_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "Whee\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr UpperIdent=>UpperIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
UpperIdent("Whee")

[=== formatted below ===]

