crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__basic_tuple_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "(1, 2, 3)\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginParens Num=>IntBase10@1 Num=>IntBase10@3 Num=>IntBase10@5 EndParens)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Tuple([IntBase10("1"), IntBase10("2"), IntBase10("3")])

[=== formatted below ===]

