crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__basic_var_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "whee\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("whee")

[=== formatted below ===]

