crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__bound_variable_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a:\nc 0\n"
---
(BeginTopLevelDecls
    (BeginTypeOrTypeAlias
        Ident=>LowerIdent@0
        InlineTypeColon=>OpColon@1
        Ident=>LowerIdent@2
    EndTypeOrTypeAlias)
    HintExpr
    Num=>IntBase10@3
EndTopLevelDecls)

[=== canfmt below ===]
TypeAlias(Ident("a"), Name("c"))
IntBase10("0")

[=== formatted below ===]

