crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__closure_in_binop_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a\n&& (\\x -> x)\n    8\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpAnd=>OpAnd@1
            (*
                (BeginParens
                    (BeginLambda
                        Ident=>LowerIdent@4
                        InlineLambdaArrow=>OpArrow@5
                        Ident=>LowerIdent@6
                    EndLambda)
                EndParens)
                InlineApply=>CloseRound@7
                Num=>Int@8
            EndApply)
        EndBinOpAnd)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("a"), And, Apply(Lambda([Ident("x")], Ident("x")), [IntBase10("8")]))

[=== formatted below ===]

