crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__closure_in_binop_with_spaces_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "i>\\s->s\n-a\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineBinOpGreaterThan=>OpGreaterThan@1
            (BeginLambda
                Ident=>LowerIdent@3
                InlineLambdaArrow=>OpArrow@4
                Ident=>LowerIdent@5
            EndLambda)
        EndBinOpGreaterThan)
        HintExpr
        (* Ident=>LowerIdent@7 EndUnaryMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Ident("i"), GreaterThan, Lambda([Ident("s")], Ident("s")))
UnaryOp(Minus, Ident("a"))

[=== formatted below ===]

