crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__closure_with_underscores_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\_, _name -> 42\n"
---
(BeginTopLevelDecls
    HintExpr
    (BeginLambda
        Underscore=>Underscore@1
        Underscore=>NamedUnderscore@3
        InlineLambdaArrow=>OpArrow@4
        Num=>IntBase10@5
    EndLambda)
EndTopLevelDecls)

[=== canfmt below ===]
Lambda([Underscore("_"), Underscore("_name")], IntBase10("42"))

[=== formatted below ===]

